[package]
name = "tidbench"
version = "0.1.0"
authors = ["Thom Chiovoloni <chiovolonit@gmail.com>"]
edition = "2018"
autobenches = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "bench"
path = "bench/bench.rs"
harness = false

[dependencies]
criterion = { version = "0.3.6", features = ["real_blackbox"] }
libc = "0.2"
thread-id = "4"
cfg-if = "1"

[features]
current_thread_id = []
